adding warning suppression to YAML

--- a/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
+++ b/posts/2024-12-04-2024-nfl-season-in-10-graphs/index.qmd
@@ -15,6 +15,8 @@ format:
     number-sections: true
     code-fold: true
     code-summary: "Show the code"
+    warning: false
+    message: false
 editor: 
   markdown: 
     wrap: 72
